expired dates now working for FE, FA, & TC

--- a/src/index.css
+++ b/src/index.css
@@ -55,3 +55,7 @@ ul {
   content: " *"; /* Adding asterisk after the label */
   color: red; /* Changing asterisk color to red */
 }
+
+.overdue {
+  color: red;
+}
