Add drop-down menu functionality to nav-drawer

--- a/src/index.css
+++ b/src/index.css
@@ -59,3 +59,24 @@ ul {
 .overdue {
   color: red;
 }
+
+.MuiDrawer-root .MuiNavlink::before {
+  background-color: rgba(0, 0, 0, 0.12);
+
+}
+
+.MuiDrawer-root .MuiNavlink{
+  font-size: 16px;
+  padding-top: 5px;
+  padding-bottom: 0px;
+  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);
+}
+
+.MuiDrawer-root .MuiAccordion-root .MuiNavlink {
+  font-size: 14px !important;
+  box-shadow: none;
+}
+
+.MuiDrawer-root .MuiSvgIcon-root {
+  margin-top: 5px;
+}
