--- a/src/index.css
+++ b/src/index.css
@@ -52,31 +52,38 @@ ul {
 }
 
 .required-label:after {
-  content: " *"; /* Adding asterisk after the label */
-  color: red; /* Changing asterisk color to red */
+  content: " *";
+  color: red;
 }
 
 .overdue {
   color: red;
 }
 
-.MuiDrawer-root .MuiNavlink::before {
+.MuiDrawer-root .MuiNavlink-root::before {
   background-color: rgba(0, 0, 0, 0.12);
 
 }
 
-.MuiDrawer-root .MuiNavlink{
+.MuiDrawer-root .MuiNavlink-root{
   font-size: 16px;
   padding-top: 5px;
   padding-bottom: 0px;
   box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);
 }
 
-.MuiDrawer-root .MuiAccordion-root .MuiNavlink {
+.MuiDrawer-root .MuiAccordion-root .MuiNavlink-root {
   font-size: 14px !important;
-  box-shadow: none;
+  box-shadow: 0px -2px 1px -1px rgba(0,0,0,0.2), 0px -1px 1px 0px rgba(0,0,0,0.14), 0px -1px 3px 0px rgba(0,0,0,0.12);
+}
+
+.MuiDrawer-root .MuiAccordion-root .MuiNavlink-root .MuiSvgIcon-root {
+  width: 0.8em;
+  height: 0.8em;
+  margin-top: 4px;
 }
 
 .MuiDrawer-root .MuiSvgIcon-root {
   margin-top: 5px;
+
 }
