--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,13 @@ body {
   margin: 0;
   font-size: 1.1em;
 }
-ul, li, p, h1, h2, h3, h4 {
+ul,
+li,
+p,
+h1,
+h2,
+h3,
+h4 {
   margin: 0;
   padding: 0;
 }
@@ -32,27 +38,26 @@ ul {
   font-size: 1em;
 }
 
-.err{
+.err {
   margin-top: 2em;
   color: red;
   text-align: center;
 }
 
-.startDate .css-z3c6am-MuiFormControl-root-MuiTextField-root{
-  width:100%
+.startDate .css-z3c6am-MuiFormControl-root-MuiTextField-root {
+  width: 100%;
 }
 
-.css-z3c6am-MuiFormControl-root-MuiTextField-root{
-  width:49%
+.css-z3c6am-MuiFormControl-root-MuiTextField-root {
+  width: 49%;
 }
-
 
 .MuiTextField-root {
   width: 100%;
 }
 
 .required-label:after {
-  content: " *";
+  content: ' *';
   color: red;
 }
 
@@ -66,19 +71,24 @@ ul {
 
 .MuiDrawer-root .MuiNavlink-root::before {
   background-color: rgba(0, 0, 0, 0.12);
-
 }
 
-.MuiDrawer-root .MuiNavlink-root{
+.MuiDrawer-root .MuiNavlink-root {
   font-size: 16px;
   padding-top: 5px;
   padding-bottom: 0px;
-  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);
+  box-shadow:
+    0px 2px 1px -1px rgba(0, 0, 0, 0.2),
+    0px 1px 1px 0px rgba(0, 0, 0, 0.14),
+    0px 1px 3px 0px rgba(0, 0, 0, 0.12);
 }
 
 .MuiDrawer-root .MuiAccordion-root .MuiNavlink-root {
   font-size: 14px !important;
-  box-shadow: 0px -2px 1px -1px rgba(0,0,0,0.2), 0px -1px 1px 0px rgba(0,0,0,0.14), 0px -1px 3px 0px rgba(0,0,0,0.12);
+  box-shadow:
+    0px -2px 1px -1px rgba(0, 0, 0, 0.2),
+    0px -1px 1px 0px rgba(0, 0, 0, 0.14),
+    0px -1px 3px 0px rgba(0, 0, 0, 0.12);
 }
 
 .MuiDrawer-root .MuiAccordion-root .MuiNavlink-root .MuiSvgIcon-root {
@@ -89,6 +99,4 @@ ul {
 
 .MuiDrawer-root .MuiSvgIcon-root {
   margin-top: 2px;
-
 }
-
